✨ Refactor error handling and responsing / Add structure / Add validator / Adjust frontend api fetching
