# backend/image-service/internal/controller/health.go
@@ -1,7 +1,7 @@
 package controller
 
 import (
-	"net/http"
+	"image-service/internal/json"
 
 	"github.com/gin-gonic/gin"
 )
@@ -11,10 +11,8 @@ import (
 // @Description Returns 200 OK if the service is up
 // @Tags Health
 // @Produce json
-// @Success 200 {object} map[string]string "Service is healthy"
+// @Success 200 {object} model.SuccessResponse "Service is healthy"
 // @Router /v1/album/health [get]
 func HealthCheckHandler(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{
-		"status": "ok",
-	})
+	json.ConstructJsonResponseSuccess(c, nil)
 }
