# backend/image-service/internal/controller/image_controller.go
@@ -1,9 +1,8 @@
 package controller
 
 import (
-	"errors"
-	"fmt"
 	custom_errors "image-service/internal/errors"
+	"image-service/internal/json"
 	"image-service/internal/service"
 	"net/http"
 
@@ -22,11 +21,11 @@ type ImageController struct {
 // @Produce json
 // @Param id path string true "Album ID"
 // @Param file formData file true "Image file(s) to upload"
-// @Success 201 {object} map[string]interface{} "Image uploaded successfully"
-// @Failure 400 {object} map[string]string "Bad Request"
-// @Failure 404 {object} map[string]string "Album Not Found"
-// @Failure 409 {object} map[string]string "Conflict"
-// @Failure 500 {object} map[string]string "Internal Server Error"
+// @Success 201 {object} model.SuccessResponse{data=[]model.Image} "Image uploaded successfully"
+// @Failure 400 {object} model.ErrorDetails "Bad Request"
+// @Failure 404 {object} model.ErrorDetails "Album Not Found"
+// @Failure 409 {object} model.ErrorDetails "Conflict"
+// @Failure 500 {object} model.ErrorDetails "Internal Server Error"
 // @Router /v1/album/{id}/upload [post]
 // @Security ApiKeyAuth
 func (ctrl *ImageController) Upload(c *gin.Context) {
@@ -34,32 +33,22 @@ func (ctrl *ImageController) Upload(c *gin.Context) {
 
 	form, err := c.MultipartForm()
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to get multipart form"})
+		json.ConstructJsonResponseError(c, custom_errors.NewError(custom_errors.ErrBadRequest, "Failed to get multipart form"), http.StatusBadRequest)
 		return
 	}
 
 	files := form.File["file"]
 	if len(files) == 0 {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "No files uploaded"})
+		json.ConstructJsonResponseError(c, custom_errors.NewError(custom_errors.ErrBadRequest, "No files uploaded"), http.StatusBadRequest)
 		return
 	}
 
 	savedImage, err := ctrl.service.ImageService.UploadImage(albumID, files)
 	if err != nil {
-		switch {
-		case errors.Is(err, custom_errors.ErrBadRequest):
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		case errors.Is(err, custom_errors.ErrConflict):
-			c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
-		case errors.Is(err, custom_errors.ErrNotFound):
-			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-		default:
-			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		}
+		custom_errors.MapErrors(c, err)
 		return
 	}
-	c.JSON(http.StatusCreated, gin.H{"message": "Image uploaded successfully",
-		"data": savedImage})
+	json.ConstructJsonResponseSuccess(c, savedImage, http.StatusCreated, "Image(s) uploaded successfully")
 }
 
 // Delete godoc
@@ -69,10 +58,10 @@ func (ctrl *ImageController) Upload(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Album ID"
 // @Param imageID path string true "Image ID"
-// @Success 200 {object} map[string]string "Image deleted successfully"
-// @Failure 400 {object} map[string]string "Bad Request"
-// @Failure 404 {object} map[string]string "Image Not Found"
-// @Failure 500 {object} map[string]string "Internal Server Error"
+// @Success 200 {object} model.SuccessResponse{data=nil} "Image deleted successfully"
+// @Failure 400 {object} model.ErrorDetails "Bad Request"
+// @Failure 404 {object} model.ErrorDetails "Image Not Found"
+// @Failure 500 {object} model.ErrorDetails "Internal Server Error"
 // @Router /v1/album/{id}/{imageID} [delete]
 // @Security ApiKeyAuth
 func (ctrl *ImageController) Delete(c *gin.Context) {
@@ -81,16 +70,10 @@ func (ctrl *ImageController) Delete(c *gin.Context) {
 
 	err := ctrl.service.ImageService.DeleteImage(albumID, imageID)
 	if err != nil {
-		switch {
-		case errors.Is(err, custom_errors.ErrBadRequest):
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		case errors.Is(err, custom_errors.ErrNotFound):
-			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-		default:
-			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		}
+		custom_errors.MapErrors(c, err)
+		return
 	}
-	c.JSON(http.StatusOK, gin.H{"message": "Image deleted successfully"})
+	json.ConstructJsonResponseSuccess(c, nil, "Image deleted successfully")
 }
 
 // Serve godoc
@@ -101,7 +84,7 @@ func (ctrl *ImageController) Delete(c *gin.Context) {
 // @Param id path string true "Album ID"
 // @Param imageID path string true "Image ID"
 // @Success 200 {file} file "Image file"
-// @Failure 400 {object} map[string]string "Bad Request"
+// @Failure 400 {object} model.ErrorDetails "Bad Request"
 // @Router /v1/album/{id}/{imageID} [get]
 // @Security ApiKeyAuth
 func (ctrl *ImageController) Serve(c *gin.Context) {
@@ -109,7 +92,7 @@ func (ctrl *ImageController) Serve(c *gin.Context) {
 	imageID := c.Param("imageID")
 	imagePath, err := ctrl.service.ImageService.ServeImage(albumID, imageID)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Sprintf("Failed to serve image: %s", err.Error())})
+		custom_errors.MapErrors(c, err)
 		return
 	}
 
