# backend/image-service/internal/model/response.go
@@ -1,0 +1,16 @@
+package model
+
+type ErrorDetails struct {
+	Status  int    `json:"status"`
+	Message string `json:"message"`
+}
+
+type SuccessResponse struct {
+	Status  int    `json:"status"`
+	Data    any    `json:"data,omitempty"`
+	Message string `json:"message,omitempty"`
+}
+
+type ErrorResponse struct {
+	Error ErrorDetails `json:"error"`
+}
